; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_matrix_rotaa4f.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_matrix_rotaa4f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.matrix4 = type { i32 }
%struct.axisang = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"gs_matrix_rotaa4f\00", align 1
@thread_graphics = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_matrix_rotaa4f(float %0, float %1, float %2, float %3) #0 {
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca %struct.matrix4*, align 8
  %10 = alloca %struct.axisang, align 4
  store float %0, float* %5, align 4
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %11 = call i32 @gs_valid(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %4
  br label %28

14:                                               ; preds = %4
  %15 = load i32, i32* @thread_graphics, align 4
  %16 = call %struct.matrix4* @top_matrix(i32 %15)
  store %struct.matrix4* %16, %struct.matrix4** %9, align 8
  %17 = load %struct.matrix4*, %struct.matrix4** %9, align 8
  %18 = icmp ne %struct.matrix4* %17, null
  br i1 %18, label %19, label %28

19:                                               ; preds = %14
  %20 = load float, float* %5, align 4
  %21 = load float, float* %6, align 4
  %22 = load float, float* %7, align 4
  %23 = load float, float* %8, align 4
  %24 = call i32 @axisang_set(%struct.axisang* %10, float %20, float %21, float %22, float %23)
  %25 = load %struct.matrix4*, %struct.matrix4** %9, align 8
  %26 = load %struct.matrix4*, %struct.matrix4** %9, align 8
  %27 = call i32 @matrix4_rotate_aa_i(%struct.matrix4* %25, %struct.axisang* %10, %struct.matrix4* %26)
  br label %28

28:                                               ; preds = %13, %19, %14
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local %struct.matrix4* @top_matrix(i32) #1

declare dso_local i32 @axisang_set(%struct.axisang*, float, float, float, float) #1

declare dso_local i32 @matrix4_rotate_aa_i(%struct.matrix4*, %struct.axisang*, %struct.matrix4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
